--- a/my_list.html
+++ b/my_list.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html>
+    <head></head>
+    <body>
 <h1>My Music List</h1>
 <p>Some of my favourite post-punk and Goth songs</p>
 <ul>
@@ -7,3 +11,5 @@
 <li>"Nine While Nine"</li>
 <li>"Girlfriend In a Coma"</li>
 </ul>
+</body>
+</html>
